[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
